Login solucionado con extension chrome para cors
Template del login modificado

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -15,10 +15,14 @@
     $('.sidenav').sidenav();
   });
   </script>
+
 </head>
 <body>
-  <app-root></app-root>
-  
+  <app-root>
+      <div class="progress">
+          <div class="indeterminate"></div>
+      </div>
+  </app-root>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
  </body>
 </html>
